# mada_sdk

./: main.py  pyproject.toml  setup.py
mada_sdk/: __init__.py  process.py  start.py
src/: online.py  process.py
test/: main.py
